Wed Nov 29 12:52:04 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Moved the compile_flags portion out of the CPPFLAGS_COMMON section
          into the specific _CPPFLAGS settings to allow users to put
          compile_flags settings inside the configuration definitions.

Tue Nov 28 17:37:31 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:
        * templates/automake.mpd:

          Added the ability to set 'configurations' (as is done for vc6,
          vc7, etc.) so that different versions of executables and libraries
          can be built from the same Makefile.am.  By default, the
          'configurations' template variable is not set.  Thanks to
          Friedhelm Wolf <Friedhelm.Wolf at homag dot de> for providing the
          automake template modifications.

Mon Nov 27 16:58:31 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Convert all output files from custom commands if the project type
          requires slash conversion.

        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:
        * templates/vc8csharp.mpd:
        * templates/vc8vb.mpd:

          Made resource files not dependent upon any particular source file.
          Also, re-removed the .aspx support in the vc8 templates.  See the
          modification from Tue Jun 20 12:41:49 UTC 2006.

Wed Nov 22 18:07:56 2006  Steve Huston  <shuston@riverace.com>

        * templates/vc8platforms.mpt: Corrected macros and libs for Smartphone
          WinCE configurations.

Wed Nov 22 20:40:58 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * templates/vc8csharp.mpd:
        * templates/vc8vb.mpd:

          Added support for resource files (.resx or .resources) and .aspx
          files for both csharp and vb for the vc8 project type.

Wed Nov 22 19:54:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
